Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15, 6.8.0
-
5731fe051 (dev), 0dd2561d5 (6.9), 52103b549 (6.8)
Description
When customizing the font style of a QDoubleSpinBox using a Style Sheet property selector, e.g.
QWidget[changed="true"] {font: italic;}
the font style of the spinbox's lineedit changes to "italic" when the "changed" property is set to true but the font style does not reset back to "normal" when the "changed" property is set to back to false.
Steps to reproduce:
- Run the attached example project.
- Check the "toggle changed property" checkbox. Observed behavior: The font style changes from normal to italic for both the QDoubleSpinBox and QLabel.
- Uncheck the "toggle changed property" checkbox. Observed behavior: The font style changes from italic to normal for the QLabel and the QDoubleSpinBox button symbols but not for the QDoubleSpinBox line edit.